--- a/gb/20/1/24/n11817418.md
+++ b/gb/20/1/24/n11817418.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/havifh3963/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/havifh3963/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/havifh3963/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/havifh3963/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/havifh3963/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/havifh3963/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/havifh3963/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/havifh3963/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/havifh3963/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/havifh3963/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/havifh3963/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/havifh3963/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/havifh3963/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/havifh3963/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/havifh3963/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/havifh3963/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/havifh3963/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/havifh3963/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/havifh3963/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/havifh3963/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/havifh3963/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/havifh3963/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/havifh3963/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>受神韵启迪 跨国集团总监深信创世主救人</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/01/200123180317976-600x400.jpg" />
 <h6>1月23日下午，王子集团公司运营总监Mohammed al Bayati先生和女友一同观看了神韵在伦敦Eventim Apollo剧院的演出。（麦蕾／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2020年01月24日讯】（大纪元记者麦蕾英国伦敦报导）美名远扬的<ahref="https://github.com/havifh3963/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>演出在英国首都伦敦连七场爆满。2020年1月23日下午，神韵国际艺术团在<ahref="https://github.com/havifh3963/djy/blob/master/gb/tag/%E4%BC%A6%E6%95%A6eventim-apollo%E5%89%A7%E9%99%A2.md#1">伦敦Eventim Apollo剧院</a>呈上第七场演出，中国五千年神传文化的辉煌广博令观众赞叹，好评如潮。</p>
-<p>跨国公司王子集团运营总监Mohammed al Bayati先生和女友一同观看了演出。他们认为<ahref="https://github.com/havifh3963/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>艺术家才华横溢。Bayati说：“这是一个非常引人入胜的演出，启发人们去了解中国<ahref="https://github.com/havifh3963/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md#1">传统文化</a>，以及（中共的）迫害威胁。这一点非常吸引人。”</p>
+	<p>【大纪元2020年01月24日讯】（大纪元记者麦蕾英国伦敦报导）美名远扬的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>演出在英国首都伦敦连七场爆满。2020年1月23日下午，神韵国际艺术团在<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BC%A6%E6%95%A6eventim-apollo%E5%89%A7%E9%99%A2.md#1">伦敦Eventim Apollo剧院</a>呈上第七场演出，中国五千年神传文化的辉煌广博令观众赞叹，好评如潮。</p>
+<p>跨国公司王子集团运营总监Mohammed al Bayati先生和女友一同观看了演出。他们认为<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>艺术家才华横溢。Bayati说：“这是一个非常引人入胜的演出，启发人们去了解中国<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md#1">传统文化</a>，以及（中共的）迫害威胁。这一点非常吸引人。”</p>
 <p>神韵致力于复兴中国神传文化，通过高超的音乐与舞蹈向观众展现中国五千年的辉煌文化，同时还将发生在现代的故事搬上舞台，引起很多人的共鸣。其中，关于修炼人反迫害的故事赢得观众的喜爱，修炼“真善忍”的人们在中共的残暴下坚持信仰，最终得到神的护佑，令很多人感动落泪。</p>
-<p>Bayati说：“神韵启发我们对很多事物的了解，包括：中国<ahref="https://github.com/havifh3963/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md#1">传统文化</a>、中国古典舞，以及（中共）的迫害。”</p>
+<p>Bayati说：“神韵启发我们对很多事物的了解，包括：中国<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md#1">传统文化</a>、中国古典舞，以及（中共）的迫害。”</p>
 <p>他表示，演出的最后一个节目令他感到共鸣。看到创世主在天灾降临时救度好人，他表示，这让他联想到摩西用神力拯救以色列人的故事，“我相信绝对有可能存在这样的事。”</p>
-<p>Bayati表示，他非常喜欢<ahref="https://github.com/havifh3963/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E4%B9%90%E5%99%A8%E4%BA%8C%E8%83%A1.md#1">中国乐器二胡</a>的独奏，他很惊讶于这个看似简单的乐器却能发出如此丰富的音色。他说：“真是令人惊叹！那位演奏家到底是如何让两根琴弦演奏出如此（美妙的）音乐？！”</p>
+<p>Bayati表示，他非常喜欢<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E4%B9%90%E5%99%A8%E4%BA%8C%E8%83%A1.md#1">中国乐器二胡</a>的独奏，他很惊讶于这个看似简单的乐器却能发出如此丰富的音色。他说：“真是令人惊叹！那位演奏家到底是如何让两根琴弦演奏出如此（美妙的）音乐？！”</p>
 <p>王子集团在欧洲、中东和亚洲都有分公司，业务涉及制药和投资等领域。同时，Bayati也是Toastmasters International的主席，这是一家总部位于美国的全球非营利性教育组织，以促进交流、公众演讲和领导技巧为教育内容。</p>
 <p>责任编辑：林蓁</p>
 	
@@ -19,43 +19,43 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/20/1/23/n11815040.md#1">神韵演出展现强大能量 经理赞鼓舞人心</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/20/1/23/n11815068.md#1">经理感激神韵：让世界了解中国</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/20/1/23/n11815128.md#1">神韵色彩感染设计师夫妇 “非常美丽”</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/20/1/23/n11815229.md#1">神韵展现天人合一 核医学技术师赞非常美好</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/20/1/23/n11815375.md#1">政府官员跨国观神韵 感到和神联系在一起</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/20/1/23/n11815503.md#1">药剂师夫妇：神韵是一场伟大的演出</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/1/23/n11815040.md#1">神韵演出展现强大能量 经理赞鼓舞人心</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/1/23/n11815068.md#1">经理感激神韵：让世界了解中国</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/1/23/n11815128.md#1">神韵色彩感染设计师夫妇 “非常美丽”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/1/23/n11815229.md#1">神韵展现天人合一 核医学技术师赞非常美好</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/1/23/n11815375.md#1">政府官员跨国观神韵 感到和神联系在一起</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/1/23/n11815503.md#1">药剂师夫妇：神韵是一场伟大的演出</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/29/n11010192.md#1" target="_blank">共产暴政录：计划生育是毁我中华的屠婴战争（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/3/11/n4660107.md#1" target="_blank">修炼法轮功 7旬老人弯成90度的腰直起来</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/13/n10781989.md#1" target="_blank">林辉：北京反驳彭斯 需要补历史课的是谁？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/22/n10869347.md#1" target="_blank">感恩节 法轮大法弟子感念师恩</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/3/n13553506.md#1">【未解之谜】梅辛传之三：希特勒的预言</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/17/n13582748.md#1">【奇事】这一种算命术连皇帝都大为惊奇</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/14/n13574787.md#1">古代修炼文化留给人的启示</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/14/n13576687.md#1">【百年真相】瞒天过海 中共炮制“美军细菌战”</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/25/n13605215.md#1">【十字路口】俄乌战火炙热 中共会出兵夺台吗？</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/25/n13605539.md#1">【财商天下】俄入侵乌克兰 北京被拉下水？</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/25/n13605190.md#1">【拍案惊奇】一文读懂俄乌战 普京到底想要什么？</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/23/n13600282.md#1">【更新】俄宣战 乌克兰多城遭袭 国际回应</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/24/n13602100.md#1">世界各地的长寿人群都吃些什么食物？</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/24/n13602565.md#1">【微视频】普京：共产党惹的祸 乌克兰也这么想</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/24/n13603115.md#1">鼓鼓钱包失而复得 杜汶泽妻田蕊妮大赞台湾</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/25/n13605706.md#1">陈婷宣布取消“张艺谋妻子”微博头衔 引猜测</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/24/n13602961.md#1">产后10天俄乌开战 瑞莎焦虑乌克兰亲人全失联</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/23/n13600024.md#1">香港娱乐圈爆发疫情 逾10名艺人确诊染疫</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/23/n13599881.md#1">容祖儿卖香港一处豪宅套现 亏损逾百万港币</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/24/n13602100.md#1">世界各地的长寿人群都吃些什么食物？</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/19/n13589665.md#1">“回春操”只要2动作！防老化 让身体变年轻</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/24/n13602266.md#1">【健康1+1】感染Omicron自救方法</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/25/n13604960.md#1">坚果是抗糖尿病绝佳食物 防高血糖、并发症</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/18/n13586699.md#1">【奇医】神医的再传弟子 看病有慧眼立奇功</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/havifh3963/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/havifh3963/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/24/n11817418.htm">受神韵启迪 跨国集团总监深信创世主救人</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/24/n11817418.htm">受神韵启迪 跨国集团总监深信创世主救人</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/havifh3963/djy/blob/master/gb/20/1/24/n11817418.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/havifh3963/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/havifh3963/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/havifh3963/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/20/1/24/n11817418.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
